@@ -1,4 +1,6 @@
 const PATCH_NOTES = 
+	'2022/06/24\n' +
+	'• Addressed crash that occur with bad network state during emoji tracking.\n' +
 	'2022/06/18\n' +
 	'• Added "Please clap." interaction.\n' + 
 	'2022/04/15\n' +
